# spyctl-cli

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  black.sh  cmdline_test.py  exclude-patterns.txt  load_resource_schemas.py  pyproject.toml  pytest.ini  ruff-format.sh  ruff-lint.sh  ruff.toml
.github/workflows/: api-build-deploy.yaml  api-build-dry-run.yaml  black.yml  format-check.yml  lint-check.yml  publish-to-pypi.yaml  publish-to-test-pypi.yaml  python-package.yml  python-test.yml  reusable-build-deploy.yaml  reusable-build-dry-run.yaml
docs/: commands.rst  conf.py  index.rst  requirements.in  requirements.txt
spyctl/: cache_dict.py  cli.py  filter_resource.py  schemas_v2.py  spyctl.py  spyctl_lib.py
spyctl/api/: agent_health.py  agents.py  api_testing.py  athena_search.py  clusters.py  custom_flags.py  logs.py  notification_targets.py  notification_templates.py  notifications.py  objects.py  orgs.py  policies.py  primitives.py  pypi.py  reports.py  rulesets.py  saved_queries.py  search_sets.py  source_queries.py  source_query_resources.py  sources.py
spyctl/archive/: old_args.py  old_merge.py
spyctl/commands/: __init__.py  config.py  describe.py  diff.py  edit.py  export.py  get_object.py  logs.py  merge.py  print_file.py  report.py  search.py  show_schema.py  spy_import.py  suppress.py  test_notification.py  update.py  validate.py
spyctl/commands/apply_cmd/: __init__.py  agent_health.py  apply.py  notification_target.py  notification_template.py
spyctl/commands/create/: __init__.py  agent_health.py  cluster_policy.py  container_policy.py  container_ruleset.py  create_cmd_group.py  custom_flag.py  linux_svc_policy.py  notification_target.py  notification_template.py  saved_query.py  search_set.py  trace_suppression_policy.py
spyctl/commands/delete/: __init__.py  agent_health.py  custom_flag.py  delete_cmd_group.py  notification_target.py  notification_template.py  policy.py  ruleset.py  (+3 more)
spyctl/config/: __init__.py  configs.py  secrets.py
spyctl/merge_lib/: diff_lib.py  merge_lib.py  merge_object.py  merge_object_helper.py  merge_schema.py  ruleset_merge_object.py  ruleset_policy_merge.py  workload_merge.py
spyctl/resources/: __init__.py  agent_health.py  agents.py  api_filters.py  bash_cmds.py  cluster_policies.py  cluster_rulesets.py  clusterrolebindings.py  clusterroles.py  clusters.py  connection_bundles.py  connections.py  container_policies.py  container_rulesets.py  containers.py  custom_flags.py  daemonsets.py  deployments.py  deviations.py  fingerprints.py  flags.py  linux_services.py  linux_svc_policies.py  machines.py  namespaces.py  nodes.py  notification_config_templates.py  notification_configs.py  notification_settings.py  notification_targets.py  notification_templates.py  pods.py  policies.py  processes.py  replicasets.py  resources_lib.py  rolebindings.py  roles.py  rulesets.py  saved_queries.py  (+4 more)
spyctl/rules_lib/: rule.py  ruleset.py  scope.py  selector_helpers.py  selectors.py
spyctl/tests/: backups.py  mock_functions.py  test_commands.py  test_config.py  test_func.py  test_get_resources.py  test_report_api.py  testdata_resource.json
(+100 files in other folders)
