[project]
name = "spyctl"
version = "0.22.4"
description = "A command line tool for viewing and managing Spyderbat Resources"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["spyctl", "spyderbat", "kubectl", "kubernetes"]
authors = [
  { name="Brent Haub", email="dev@spyderbat.com" },
  { name="Kyle Smith Hanna", email="dev@spyderbat.com" },
  { name="Guy Duchatelet", email="dev@spyderbat.com" },
  { name="Ruhika Bulani", email="dev@spyderbat.com" }
]
maintainers = [
  {name="Brent Haub", email="dev@spyderbat.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.8",
    "click-aliases>=1.0.5",
    "pydantic>=2.11.4",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "typing-extensions>=4.13.2",
    "zulu>=2.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["spyctl"]

[tool.setuptools.package-data]
"spyctl.commands.get" = ["resource_schemas.json"]

[project.urls]
"Homepage" = "https://spyctl.readthedocs.io/en/latest/"
"Documentation" = "https://spyctl.readthedocs.io/en/latest/"
"Source" = "https://github.com/spyderbat/spyctl"
"Spyderbat" = "https://www.spyderbat.com/"

[project.scripts]
spyctl = "spyctl.spyctl:main"